// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prompt-initial should do correct initial message 1`] = `
"#PUBLIC
Hello [A](Cat) and [B](Dog). I am Mediator, and I am here to assist you both in reaching a fair and mutually beneficial solution. During this session, it's essential to be open, respectful, and direct. You both seem to have differing preferences on where to play. Let's begin by understanding your perspectives better. [A](Cat), could you please explain why you prefer to play inside? 
#SECRET_A
#SECRET_B
#END"
`;

exports[`prompt-initial should reply private message to private message 1`] = `
"#PUBLIC
#SECRET_A
Sure, [A](Cat), we can continue in private. Your comfort is important in this mediation process.
#SECRET_B
#END"
`;

exports[`prompt-initial should reply send messages to both participants 1`] = `
"#PUBLIC
#SECRET_A
Sure, [A](Cat). I will ask [B](Dog) his reasons in private.
#SECRET_B
[B](Dog), [A](Cat) wanted to know why playing outside is appealing to you. Could you please explain your reasons?
#END"
`;
